# Cooling-System

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
cmake/: gcc-arm-none-eabi.cmake
cubemx-generated/: .cproject  .mxproject  .project  CMakeLists.txt  Cooling-System.ioc  Cooling-System.txt
cubemx-generated/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
cubemx-generated/Src/: adc.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
cubemx-generated/cmake/stm32cubemx/: CMakeLists.txt
docs/: SIMPLE_UART_CONFIG_PROTOCOL.md
drivers/: aht_20.cpp  aht_20.hpp  ds18b20.cpp  ds18b20.hpp  esp_at_wifi_mqtt.cpp  esp_at_wifi_mqtt.hpp  serialport.cpp  serialport.hpp
drivers/ethernet/: CMakeLists.txt
drivers/ethernet/inc/: Ethernet.h  enc28j60.h
drivers/ethernet_enc28j60/: CMakeLists.txt
drivers/ethernet_w5500/: CMakeLists.txt  wizchip_conf.h
tasks/: climate_control_task.cpp  climate_control_task.hpp  communication_task.cpp  communication_task.hpp  external_cool_task.cpp  external_cool_task.hpp
types/: commands.hpp  settings.hpp
